# MemRW

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  LICENSE  README.md  RingBuffer.h  build.ninja  cmake_install.cmake  dwarf4-output.txt  groupitemadddialog.cpp  groupitemadddialog.h  groupitemadddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memrw.deb  res.qrc
.cmake/api/v1/reply/: cache-v2-f23166c06135fa8797ba.json  cmakeFiles-v1-6b1c67bc2d431ffb9c8b.json  codemodel-v2-ccd6ae0040484881107d.json  directory-.-Debug-2d542327b112454270ee.json  index-2025-09-12T10-43-51-0399.json  target-MemRW-Debug-9e722a52729f05db99c3.json  target-MemRW_autogen-Debug-647ef1219030eae32b18.json  target-MemRW_autogen_timestamp_deps-Debug-c544f4e44873b1e57ff2.json  toolchains-v1-134886259e5f4c38a328.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
ChartPlugin/: ChartPlugin.pro
ChartPlugin/ChartWidgetPlugin/: ChartWidgetPlugin.pro  chartwidgetplugin.cpp  chartwidgetplugin.h  icons.qrc
Inc/CMSIS_DAP/: DAPReader.h  SWReg.h
Inc/GetAddr/: VariTree.h  attr_utils.h  dw_base_utils.h  dw_utils.h  tag_utils.h  type_utils.h
Inc/QtOverride/: FitCurveChartView.h  TreeItem.h  TreeModel.h  addcharttabdialog.h  addtabletabdialog.h  chartsettingdialog.h  charttabwidget.h  datalogdialog.h  groupitemadddialog.h  tabletabwidget.h
Inc/TreeModel/: TreeItem.h  TreeModel.h
Res/: CLionDemo.elf  armclang_engineer.axf  log.csv
Src/CMSIS_DAP/: DAPReader.cpp
Src/GetAddr/: VariTree.cpp  attr_utils.cpp  dw_base_utils.cpp  dw_utils.cpp  main_task.cpp  tag_utils.cpp  type_utils.cpp
Src/QtOverride/: FitCurveChartView.cpp  TreeModel.cpp  addcharttabdialog.cpp  addcharttabdialog.ui  addtabletabdialog.cpp  addtabletabdialog.ui  chartsettingdialog.cpp  chartsettingdialog.ui  charttabwidget.cpp  charttabwidget.ui  datalogdialog.cpp  datalogdialog.ui  groupitemadddialog.cpp  groupitemadddialog.ui  tabletabwidget.cpp  tabletabwidget.ui
Src/TreeModel/: TreeItem.cpp
memrw/DEBIAN/: control  postinst  postrm
memrw/lib/udev/rules.d/: 99-memrw.rules
memrw/usr/share/applications/: memrw.desktop
